// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> layout renders Checkbox 1`] = `
<div
  className="mfui-checkbox mfui-checkbox_font-size_regular mfui-checkbox_color_dark"
>
  <div
    className="mfui-checkbox__inner"
  >
    <label
      className="mfui-checkbox__label mfui-checkbox__label_no-touch"
    >
      <input
        checked={false}
        className="mfui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="mfui-checkbox__custom-input"
      >
        <test-file-stub
          className="mfui-checkbox__icon"
        />
      </div>
      Тестовая строка
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> layout renders Checkbox on mobile resolution 1`] = `
<div
  className="mfui-checkbox mfui-checkbox_font-size_regular mfui-checkbox_color_dark"
>
  <div
    className="mfui-checkbox__inner"
  >
    <label
      className="mfui-checkbox__label"
    >
      <input
        checked={false}
        className="mfui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="mfui-checkbox__custom-input"
      >
        <test-file-stub
          className="mfui-checkbox__icon"
        />
      </div>
      Тестовая строка на мобильном разрешении
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> layout renders Checkbox with props 1`] = `
<div
  className="mfui-checkbox mfui-checkbox_font-size_small mfui-checkbox_color_light mfui-checkbox_checked mfui-checkbox_disabled mfui-checkbox_error testClassName"
>
  <div
    className="mfui-checkbox__inner"
  >
    <label
      className="mfui-checkbox__label mfui-checkbox__label_no-touch"
    >
      <input
        checked={true}
        className="mfui-checkbox__input"
        disabled={true}
        name="testInputName"
        onChange={[Function]}
        type="checkbox"
        value="testInputValue"
      />
      <div
        className="mfui-checkbox__custom-input"
      >
        <test-file-stub
          className="mfui-checkbox__icon"
        />
      </div>
      Тестовая строка
    </label>
    <span
      className="mfui-checkbox__extra-content"
    >
      text
    </span>
  </div>
</div>
`;

exports[`<Checkbox /> layout renders with classes 1`] = `
<div
  className="mfui-checkbox mfui-checkbox_font-size_regular mfui-checkbox_color_dark"
>
  <div
    className="mfui-checkbox__inner custom-inner"
  >
    <label
      className="mfui-checkbox__label"
    >
      <input
        checked={false}
        className="mfui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="mfui-checkbox__custom-input custom-icon"
      >
        <test-file-stub
          className="mfui-checkbox__icon"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> layout renders with data attrs 1`] = `
<div
  className="mfui-checkbox mfui-checkbox_font-size_regular mfui-checkbox_color_dark"
  data-test="test"
>
  <div
    className="mfui-checkbox__inner"
  >
    <label
      className="mfui-checkbox__label"
    >
      <input
        checked={false}
        className="mfui-checkbox__input"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="mfui-checkbox__custom-input"
      >
        <test-file-stub
          className="mfui-checkbox__icon"
        />
      </div>
    </label>
  </div>
</div>
`;
